--- a/web/package.json
+++ b/web/package.json
@@ -49,7 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
-    "next": "16.1.4",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -176,5 +176,8 @@
       "node_modules",
       "<rootDir>"
     ]
+  },
+  "overrides": {
+    "tar": "^7.5.4"
   }
 }
